crates/ide/src/handlers/snapshots/ide__handlers__goto_definition__tests__class.snap
---
source: crates/ide/src/handlers/goto_definition.rs
expression: "check(\"class Foo; class $Bar : Foo;\")"
---
/main.td
class Foo; class Bar : Foo;
                 ^^^
