crates/ide/src/handlers/snapshots/ide__handlers__goto_definition__tests__class_parent_arg.snap
---
source: crates/ide/src/handlers/goto_definition.rs
expression: "check(\"class Foo<int x>; class Bar<int y> : Foo<$y>;\")"
---
/main.td
class Foo<int x>; class Bar<int y> : Foo<y>;
                                ^
