crates/ide/src/handlers/snapshots/ide__handlers__goto_definition__tests__class_template_arg.snap
---
source: crates/ide/src/handlers/goto_definition.rs
expression: "check(\"class Foo<int $foo>;\")"
---
/main.td
class Foo<int foo>;
              ^^^
