crates/ide/src/handlers/snapshots/ide__handlers__goto_definition__tests__def.snap
---
source: crates/ide/src/handlers/goto_definition.rs
expression: "check(\"def $foo;\")"
---
/main.td
def foo;
    ^^^
