crates/ide/src/handlers/snapshots/ide__handlers__goto_definition__tests__multiple_files.snap
---
source: crates/ide/src/handlers/goto_definition.rs
expression: "check_multi(r#\"\n; main.td\ninclude \"sub.td\"\nclass Foo : $Bar;\n\n; sub.td\nclass Bar;\n            \"#,)"
---
sub.td
class Bar;
      ^^^
