crates/ide/src/handlers/snapshots/ide__handlers__goto_definition__tests__other.snap
---
source: crates/ide/src/handlers/goto_definition.rs
expression: symbols
---
Some(
    FileRange {
        file: FileId(
            0,
        ),
        range: 6..9,
    },
)
